test/files/pos/t2458c/test.scala

package p {
  import util._

  class D extends C
}
