test/files/neg/macro-invalidusage-presuper-typemacros/Macros_Test_2.scala
import Impls._

class D extends { type T = macro impl } with AnyRef